--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
-    "prop-types": "^15.5.8",
-    "react": "^15.5.4",
+    "prop-types": "^15.6.1",
+    "react": "^15.6.2",
+    "react-debounce-input": "^3.2.0",
     "react-dom": "^15.5.4",
     "react-router-dom": "^4.3.1"
   },
